# hf_llm

./: .gitignore  main.py  pyproject.toml
notebooks/: ch1a.ipynb  ch2a.ipynb  ch3a.ipynb  ch3b.ipynb  ch3c.ipynb  ch3d.ipynb  ch3e.ipynb  ch3f.ipynb  ch4a.ipynb  ch4b.ipynb  ch5a.ipynb  ch5b.ipynb  ch5c.ipynb  ch5d.ipynb  ch5e.ipynb  ch6a.ipynb  ch6b.ipynb  ch6c.ipynb  ch7a.ipynb  ch7b.ipynb  ch7c.ipynb  ch7d.ipynb  ch7e.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20251208_020354-l9bxtkz1/: run-l9bxtkz1.wandb
notebooks/wandb/run-20251208_020354-l9bxtkz1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20251208_020642-g4qwcrj7/: run-g4qwcrj7.wandb
notebooks/wandb/run-20251208_020642-g4qwcrj7/files/: config.yaml  wandb-metadata.json
notebooks/wandb/run-20251208_020758-wtsbpjrc/: run-wtsbpjrc.wandb
notebooks/wandb/run-20251208_020758-wtsbpjrc/files/: config.yaml  requirements.txt  wandb-metadata.json
notebooks/wandb/run-20251208_020944-6ps0dh5y/: run-6ps0dh5y.wandb
notebooks/wandb/run-20251208_020944-6ps0dh5y/files/: wandb-metadata.json
quarto_doc/: _quarto.yml  test.qmd
